# opengl-playground

./: .gitignore  Bucephalus.cpp  CMakeLists.txt  README.md  main.cpp  make.sh  spinning_triangle.cpp  spinning_triangle.h  spinning_triangle_2.cpp  static_triangle.cpp
res/shaders/: basic.shader
