CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
PROJECT(psyops_dispatch)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_BUILD_TYPE DEBUG)

set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

add_subdirectory($ENV{HOME}/.local/include/glfw $ENV{PWD}/.local/include/glfw/src)

CMAKE_POLICY(SET CMP0072 NEW)  # use GLVND over legacy OpenGL
FIND_PACKAGE(OpenGL REQUIRED)

SET(SOURCE_FILES main.cpp spinning_triangle.cpp)

ADD_EXECUTABLE(project ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(project glfw)
TARGET_LINK_LIBRARIES(project OpenGL::GL)
