CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
PROJECT(psyops_dispatch)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_BUILD_TYPE DEBUG)

SET(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

ADD_SUBDIRECTORY(deps/glfw)
ADD_SUBDIRECTORY(deps/glm)
ADD_SUBDIRECTORY(deps/glew/build/cmake)
INCLUDE_DIRECTORIES(deps/glew/include)

CMAKE_POLICY(SET CMP0072 NEW)  # use GLVND over legacy OpenGL
FIND_PACKAGE(OpenGL REQUIRED)

SET(SOURCE_FILES main.cpp spinning_triangle_2.cpp)

ADD_EXECUTABLE(main ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(main glfw)
TARGET_LINK_LIBRARIES(main glm)
TARGET_LINK_LIBRARIES(main glew)
TARGET_LINK_LIBRARIES(main OpenGL::GL)
